# damso

./: .gitignore  AGENTS.md  INSTALL.md  Makefile  Package.swift  README.md  config.example.json  pyproject.toml  requirements-local.txt
Sources/Damso/: ActionItemCalendarSection.swift  AgentSettingsView.swift  AppIconAssets.swift  CalendarSettingsView.swift  DesignReviewWindow.swift  DesignTokens.swift  ExternalSyncSettingsView.swift  MeetingDetectionSettingsView.swift  MeetingHubApp.swift  MeetingMenuBarCard.swift  MeetingPromptPanel.swift  ModelSetupSettingsView.swift  MyProfileSettingsView.swift  SettingsRootView.swift  SpeakerPlanControls.swift  StorageRootSettingsView.swift
Tests/DamsoTests/: ActionItemCalendarTests.swift  AppLifecycleTests.swift  DesignTokenTests.swift  DurableJobQueueTests.swift  ExternalSyncControllerTests.swift  ExternalSyncEngineTests.swift  LegacyArtifactDecodingTests.swift  LocalModelSetupTests.swift  LocalProcessingCommandTests.swift  MeetingDetectionTests.swift  MeetingStoreTests.swift  ParticipantCaptureTests.swift  PipelineBehaviorTests.swift  PlaudCLIProviderTests.swift  ProcessingOrphanSweeperTests.swift  ProcessingWorkCoordinatorTests.swift  ProfileDeleteTests.swift  ProfileMergeTests.swift  RecordingCutoffTests.swift  RecordingRecoveryJournalTests.swift  RecordingSessionTests.swift  SpeakerMatchingTests.swift  StorageRootConfigurationTests.swift  SyncSchedulerTests.swift
backend/damso.egg-info/: PKG-INFO  (+4 more)
docs/: transcription-pipeline.md  verification.md
scripts/: check-whisper-model-directory.py  install-local-app.sh
(+78 files in other folders)
